--- a/c2rust-transpile/src/build_files/Cargo.toml.hbs
+++ b/c2rust-transpile/src/build_files/Cargo.toml.hbs
@@ -32,15 +32,9 @@ path = "{{path}}"
 name = "{{name}}"
 {{/each}}
 [dependencies]
-{{~#if c2rust_bitfields}}
-c2rust-bitfields = "0.3"{{/if}}
-{{~#if c2rust_asm_casts}}
-c2rust-asm-casts = "0.1"{{/if}}
-{{~#if f128}}
-f128 = "0.2"{{/if}}
-{{~#if num_traits}}
-num-traits = "0.2"{{/if}}
-libc = "0.2"
+{{#each dependencies~}}
+{{this.name}} = "{{this.version}}"
+{{/each}}
 
 {{#if cross_checks~}}
 [dependencies.c2rust-xcheck-plugin]
