--- a/c2rust-transpile/src/build_files/lib.rs.hbs
+++ b/c2rust-transpile/src/build_files/lib.rs.hbs
@@ -2,6 +2,11 @@
     #![{{this.0}}({{this.1}})]
 {{/each}}
 
+{{#each crates~}}
+{{#if this.macro_use~}}#[macro_use]{{~/if}}
+extern crate {{this.ident}};
+{{~/each}}
+
 {{#if cross_checks~}}
 #![plugin(c2rust_xcheck_plugin({{plugin_args}}))]
 #[macro_use] extern crate c2rust_xcheck_derive;
