Fix newlines in generated lib.rs
Updating to handlebars 4 changed the newline behavior of template
expansion. It looks like it was just wrong before, so now our template
should be correct.

--- a/c2rust-transpile/src/build_files/lib.rs.hbs
+++ b/c2rust-transpile/src/build_files/lib.rs.hbs
@@ -11,10 +11,10 @@ extern crate {{this.ident}};
 {{~#if this.path~}}
 #[path = "{{this.path}}"]
 {{/if~}}
-{{~#unless this.close~}}
+{{#unless this.close~}}
 pub mod {{this.name}}
 {{~#if this.open}} { {{~else~}};{{~/if}}
-{{~else~}}
+{{else~}}
 } // mod {{this.name}}
-{{~/unless}}
+{{/unless}}
 {{/each}}
